added topt auth to user
