# src/routes/auth.ts
@@ -1,5 +1,11 @@
 import { Router } from "express";
-import { loginUser, refreshUser, registerUser } from "../services/authService";
+import {
+  disableTwoFactorAuth,
+  enableTwoFactorAuth,
+  loginUser,
+  refreshUser,
+  registerUser,
+} from "../services/authService";
 
 const router = Router();
 
@@ -7,5 +13,7 @@ const router = Router();
 router.post("/login", loginUser);
 router.post("/register", registerUser);
 router.post("/refresh", refreshUser);
+router.get("/enable-tfa", enableTwoFactorAuth);
+router.get("/disable-tfa", disableTwoFactorAuth);
 
 export default router;
